# SimServer

./: CMakeLists.txt  Expression.h  Hey.cpp  Hey.h  main.cpp  make
Client/: Client.cpp  Client.h
Expression/: BinaryExpression.h  ConditionExpression.cpp  ConditionExpression.h  ConditionParser.h  ConnectExpression.cpp  ConnectExpression.h  Div.h  Expression.h  ExpressionMaps.cpp  ExpressionMaps.h  IfExpression.h  Minus.h  Modulo.h  Mult.h  Neg.h  Number.h  OpenDataServerExpression.cpp  OpenDataServerExpression.h  Plus.h  PrintExpression.h  ShuntingYard.cpp  ShuntingYard.h  SleepExpression.h  UnaryExpression.h  UpdateVarExpression.h  VarExpression.h  WhileExpression.h
Expression/MathExpression/: Div.h  Minus.h  Modulo.h  Mult.h  Neg.h  Plus.h
Lexer/: Lexer.cpp  Lexer.h
Parser/: Parser.cpp  Parser.h  SubVectorByItsExpression.cpp  SubVectorByItsExpression.h  ValidateExpression.cpp  ValidateExpression.h
Tests/: LexerTest.h  NumberTest.h  ParserTests.h  ServerTest.h  ShuntinYardTests.h  UtilsTester.h
Utils/: Utils.cpp  Utils.h  XmlOrder.txt
